--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -7,9 +7,9 @@ on:
 jobs:
   terraform-plan-nonprod:
     permissions:
-      id-token: write      # Required for Azure OIDC
-      contents: read       # Required to checkout code
-      pull-requests: write # Required to post the Plan comment
+      id-token: write
+      contents: read
+      pull-requests: write
     uses: iainazure/devstream_workflows/.github/workflows/terraform_plan.yaml@v0
     with:
       working_directory: infrastructure/environments/nonprod
