--- a/.github/workflows/terraform_apply.yaml.yml
+++ b/.github/workflows/terraform_apply.yaml.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   apply-nonprod:
+    permissions:
+      id-token: write
+      contents: read
     uses: iainazure/devstream_workflows/.github/workflows/terraform_apply.yaml@v0
     with:
       working_directory: infrastructure/environments/nonprod
